# SUARA

./: .gitignore  LICENSE  README.md  experiment.ipynb  explore.py  main.py  overfit_check.py  pyproject.toml  requirements.txt
arc/: attn.py  block.py  casusal_wave_conv.py  ffn.py  gru.py  normalizer.py  rope.py
data/: config.py  config.yaml
helper/: sanity_check.py
model/: inference.py  model.py  no_attention.py  optim.py  train.py  with_attention.py
utils/: cleaning.py  dataset.py  tokenizer.py
